# ximalaya-main

./: .env  .gitignore  README.md  album_13396678.json  album_85176308.json  album_download.py  album_fetcher.py  album_tracks_data.json  downloader.py  gui.py  main.py  main.spec  pyproject.toml  track_fetcher.py  utils.py  ximalaya_xmsign.py
downloader/: album_download.py  downloader.py  single_track_download.py
fetcher/: album_fetcher.py  history_fetch.py  track_fetcher.py  track_info_fetcher.py
gui/: gui.py
tests/: test_downloader.py  test_fetcher.py
utils/: utils.py  ximalaya_xmsign.py
