[project]
name = "ximalaya-main"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "crypto>=1.4.1",
    "pillow>=11.2.1",
    "pycryptodome>=3.23.0",
    "pyinstaller>=6.14.1",
    "pytest>=8.4.1",
    "python-dotenv>=1.1.0",
    "requests>=2.32.4",
]
